--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day-Sixteen </title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <h1>Drink Water</h1>
     <h3>Goal: 2 Liters</h3>
-    
+
     <div class="cup">
         <div class="remained" id="remained">
             <span id="liters">1.5L</span>
@@ -32,5 +33,7 @@
         <div class="cup cup-small">250ml</div>
         <div class="cup cup-small">250ml</div>
     </p>
+
+    <script src="script.js"></script>
 </body>
 </html>
